server/compilers/goLiteJS/src/test/ml1/invalid/package2.go
// no package declaration
var x int
